# plansafebench-evm

./: .gitignore  AUTHORS.md  CITATION.cff  DATA_LICENSE.md  FILE_INVENTORY.md  LICENSE  README.md  REPO_CODE_AUDIT_REPORT_v1_2.md  REPO_CODE_AUDIT_REPORT_v1_4_0.md  pyproject.toml
data/: README.md
data/llm_outputs/: outputs_openrouter_gemini25flashlite_full1760_resume.csv  outputs_openrouter_qwen30b_full1760.csv
docs/: README_EXECUTE_LLM_AUDIT_v5_4.md  README_llm_generated_plan_audit_v5_3.md  formal_semantic_policy_model_v5_6.md
docs/corrected_v5_6/: README_DATA_ADDENDUM_v1_3.md  README_corrected_scientific_package_v5_6.md  plansafebench_evm_jisa_claim_matrix_corrected_v5_6.csv
examples/: demo_llm_outputs_claude_smoke.csv  demo_prompts_v5_3.csv  demo_scenarios_v4_8.csv
legacy/data_collection/: plansafebench_evm_api_rpc_extractor_v4_4.py  plansafebench_evm_q1_level12_strict_gate_v4_4.py
legacy/llm_audit/: plansafebench_evm_llm_audit_ollama_runner_v5_4.py  plansafebench_evm_llm_audit_quality_gate_v5_4.py  (+1 more)
results/: README.md
scripts/: correct_dataset_labels.py  prepare_expert2_validation_form.py  prepare_expert2_validation_form_FINAL.py  rescore_llm_outputs.py  run_main_experiment.py  run_openai_compatible_llm_audit.py  run_v0_3_1_main_stats_longformat.py  run_v0_3_2_counterfactual_experiment.py  run_v0_3_2b_counterfactual_experiment.py  run_v0_3_3_harmonized_counterfactual_experiment.py  run_v0_3_4_fast_harmonized_bootstrap.py  run_v0_3_hardening_analysis.py  run_v0_4_expert_validation_analysis.py
tests/: test_semantic_policy.py
(+49 files in other folders)
