[project]
name = "plansafebench-evm"
version = "1.2.0"
description = "Reproducible code for PlanSafeBench-EVM semantic-policy validation experiments"
authors = [
  {name = "Astrid Pranadani"},
  {name = "Dhani Ariatmanto"}
]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "requests>=2.31",
  "python-dateutil>=2.8",
]

[tool.setuptools.packages.find]
where = ["src"]
